--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -33,5 +33,5 @@ $xxxl: 8rem;
 // Breakpoints
 //==============================================================================
 $mobile: 600px;
-$tablet: 800px;
+$tablet: 700px;
 $desktop: 1000px;
